--- a/Homeworks/Homework02/readMe
+++ b/Homeworks/Homework02/readMe
@@ -1,4 +1,4 @@
-## 3DMP -  Homework 2
+## 3DMP -  Homework 2 ##
 * Soft deadline: 07.03.2021 | 23:59:59
 * Hard deadline:  10.03.2021 | 23:59:59 (50% of the grade) 
 ### Tasks:
